--- a/Verkefni7_innihald.html
+++ b/Verkefni7_innihald.html
@@ -55,12 +55,12 @@
         <nav>
         <h4>Verkefnin 6</h4>
         <ul>
-          <li><a href="verkefni1_2.html">Verkefni 1</a></li>
-          <li><a href="verkefni2_1.html">Verkefni 2</a></li>
-          <li><a href="skilaverk3_1.html">Verkefni 3</a></li>
-          <li><a href="skilaverk4_2.html">Verkefni 4</a></li>
-          <li><a href=""></a>Verkefni 5</a></li>
-          <li><a href=""></a>Verkefni 6</a></li>
+		<li><a href="v1/verkefni1_2.html" target="_blank">Verkefni 1</a></li>
+		<li><a href="v2/verkefni2_1" target="_blank">Verkefni 2</a></li>
+		<li><a href="v3/skilaverk3_1.html" target="_blank">Verkefni 3</a></li>
+		<li><a href="v4/skilaverk4_2.html" target="_blank">Verkefni 4</a></li>
+		<li><a href=""></a>Verkefni 5</a></li>
+		<li><a href=""></a>Verkefni 6</a></li>
         </ul>
         </nav>
     </nav>
