--- a/v4/skilaverk4_2.html
+++ b/v4/skilaverk4_2.html
@@ -17,7 +17,7 @@
 	<nav class="topnav">
 		<ul class="topmenu">
             <li><a href="v3/skilaverk3_2" class="virkur">Forsíða</a> </li>
-            <li><a href="v3/skilaverk3_2_siða2.html">Síða 2</a></li>
+            <li><a href="v3/skilaverk3_2_siða2">Síða 2</a></li>
             <li><a href="v3/skilaverk3_2_siða3.html">Síða 3</a></li> 
             <li><a href="sida4.html">Síða 4</a> </li>
         </ul>
